--- a/log-alpha.html
+++ b/log-alpha.html
@@ -35,6 +35,7 @@
     </style>
     <script src="script/common.js" />
     <script src="script/note.js" />
+    <script src="script/expense.js" />
 </head>
 <body>
     <div contenteditable="true" id="tb"></div>
