--- a/log-alpha.html
+++ b/log-alpha.html
@@ -33,9 +33,9 @@
             display: block;
         }
     </style>
-    <script src="scripts/common.js"></script
-    <script src="scripts/note.js"></script
-    <script src="scripts/expense.js"></script
+    <script src="scripts/common.js"></script>
+    <script src="scripts/note.js"></script>
+    <script src="scripts/expense.js"></script>
 </head>
 <body>
     <div contenteditable="true" id="tb"></div>
