--- a/log-beta.html
+++ b/log-beta.html
@@ -118,6 +118,11 @@
                 doRemove(content);
                 break;
             }
+            case ".expense": {
+                showStatus(action);
+                doExpense(content);
+                break;
+            }
             default: {
                 showStatus(`${action} - failed`);
             }
@@ -192,6 +197,10 @@
         let toRemove = filterData(content);
         notes = notes.filter(d => !toRemove.some(tr => tr.date == d.date && tr.text == d.text));
         showList(toRemove);
+    }
+
+    doExpense = (content) => {
+        showExpense(filterData(content));
     }
 
     doReset = () => {
@@ -347,6 +356,28 @@
         });
         showData(message);
         showStatus(list.length, true);
+    }
+
+    showExpenses = (list) => {
+        let subList = [];
+        let message = "";
+        list.forEach(l => {
+            let entries = l.split("£");
+            let category = entries[0].trim();
+            let value = parseInt(entries[1]);
+            let matchingEntry = subList.find(sl => sl.category == category);
+            if (!matchingEntry) {
+                subList.push(new { category, value });
+            } else {
+                matchingEntry.value += value;
+            }
+        });
+        let total = subList.reduce((accumulated, item) => accumulated + item.value, 0);
+        subList.push(new { category: "Total", value: total });
+        subList.sort((a, b) => b.value - a.value);
+        subList.forEach(sl => message = `${message}\n${sl.category} - ${value}`;
+        showData(message);
+        showStatus(subList.length - 1, true);
     }
 
     saveAsFile = (data, fileName) => {
