--- a/log-beta.html
+++ b/log-beta.html
@@ -200,7 +200,7 @@
     }
 
     doExpense = (content) => {
-        showExpense(filterData(content));
+        showExpenses(filterData(content));
     }
 
     doReset = () => {
