--- a/log-beta.html
+++ b/log-beta.html
@@ -375,7 +375,7 @@
         let total = subList.reduce((accumulated, item) => accumulated + item.value, 0);
         subList.push({ category: "Total", value: total });
         subList.sort((a, b) => b.value - a.value);
-        subList.forEach(sl => message = `${message}\n${sl.category} - ${value}`);
+        subList.forEach(sl => message = `${message}\n${sl.category} - ${sl.value}`);
         showData(message);
         showStatus(subList.length - 1, true);
     }
