--- a/log-beta.html
+++ b/log-beta.html
@@ -373,8 +373,8 @@
             }
         });
         let total = subList.reduce((accumulated, item) => accumulated + item.value, 0);
-        subList.push({ category: "Total", value: total });
-        subList.sort((a, b) => b.value - a.value);
+        subList.push({ category: "[Total]", value: total });
+        subList.sort((a, b) => b.value == a.value ? b.category - a.category  : b.value - a.value);
         subList.forEach(sl => message = `${message}\n${sl.category} - ${sl.value}`);
         showData(message);
         showStatus(subList.length - 1, true);
