--- a/log-beta.html
+++ b/log-beta.html
@@ -363,26 +363,30 @@
     }
 
     showExpenses = (list) => {
-        let subList = [];
+        let summaryList = [];
         let minDate = new Date();
         let maxDate = new Date();
+        let detail;
         list.forEach(l => {
-            let entries = l.text.split("£");
-            let category = entries[0].trim();
-            let value = parseInt(entries[1].split("@")[0]);
+            let category = text.match(/#[a-z0-9-]+/g).filter(t => t != "expense").join(", ");
+            let value = parseInt(text.match(/@\S+/g));
             let matchingEntry = subList.find(sl => sl.category == category);
             minDate = minDate > new Date(l.date) ? new Date(l.date) : minDate;
             maxDate = maxDate < new Date(l.date) ? new Date(l.date) : maxDate;
+            detail = `${isoToString(l.date)} ${text}`;
             if (!matchingEntry) {
-                subList.push({ category, value });
+                summaryList.push({ category, value, detail });
             } else {
                 matchingEntry.value += value;
+                matchingEntry.detail = `${matchingEntry.detail}\n${detail}`;
             }
         });
-        let total = subList.reduce((accumulated, item) => accumulated + item.value, 0);
-        subList.sort((a, b) => b.value == a.value ? b.category - a.category  : b.value - a.value);
+        let total = summaryList.reduce((accumulated, item) => accumulated + item.value, 0);
+        summaryList.sort((a, b) => b.value == a.value ? b.category - a.category  : b.value - a.value);
         let message = `[${isoToString(minDate)} - ${isoToString(maxDate)}] ${total}\n`;
-        subList.forEach(sl => message = `${message}\n${sl.category} ${sl.value}`);
+        summaryList.forEach(sl => message = `${message}\n${sl.category} ${sl.value}`);
+        message = `${message}\n\n[Details]\n`;
+        summaryList.forEach(sl => detailMessage = `${detailMessage}\n${sl.category} ${sl.value}\n${sl.detail}`);
         showData(message);
         showStatus(subList.length - 1, true);
     }
