--- a/log-beta.html
+++ b/log-beta.html
@@ -368,7 +368,8 @@
         let maxDate = new Date();
         let detail;
         list.forEach(l => {
-            let category = text.match(/#[a-z0-9-]+/g).filter(t => t != "expense").join(", ");
+            let tags = text.match(/#[a-z0-9-]+/g).filter(t => t != "expense");
+            let category = tags.length >= 1 ? tags.join(", ") : "others";
             let value = parseInt(text.match(/@\S+/g));
             let matchingEntry = subList.find(sl => sl.category == category);
             minDate = minDate > new Date(l.date) ? new Date(l.date) : minDate;
