--- a/log-beta.html
+++ b/log-beta.html
@@ -368,9 +368,9 @@
         let minDate = new Date();
         let maxDate = new Date();
         list.forEach(l => {
-            let tags = l.text.match(/#[a-z0-9-]+/g).filter(t => t != "expense");
-            let category = tags.length >= 1 ? tags.join(", ") : "others";
-            let value = parseInt(l.text.match(/£\S+/g));
+            let tags = l.text.match(/#[a-z0-9-]+/g).filter(t => t != "#expense");
+            let category = tags.length >= 1 ? tags.join(", ") : "#other";
+            let value = parseInt(l.text.match(/£[0-9.]+/g));
             let matchingEntry = subList.find(sl => sl.category == category);
             minDate = minDate > new Date(l.date) ? new Date(l.date) : minDate;
             maxDate = maxDate < new Date(l.date) ? new Date(l.date) : maxDate;
