--- a/log-beta.html
+++ b/log-beta.html
@@ -370,7 +370,8 @@
         list.forEach(l => {
             let tags = l.text.match(/#[a-z0-9-]+/g).filter(t => t != "#expense");
             let category = tags.length >= 1 ? tags.join(", ") : "#other";
-            let value = parseInt(l.text.match(/£[0-9.]+/g));
+            let values = l.text.match(/£[0-9.]+/g);
+            let value = values.length == 0 || isNaN(parseInt(values[0])) ? 0 : parseInt(values[0]);
             let matchingEntry = summaryList.find(sl => sl.category == category);
             minDate = minDate > new Date(l.date) ? new Date(l.date) : minDate;
             maxDate = maxDate < new Date(l.date) ? new Date(l.date) : maxDate;
