--- a/log-beta.html
+++ b/log-beta.html
@@ -385,12 +385,12 @@
         });
         let total = summaryList.reduce((accumulated, item) => accumulated + item.value, 0);
         summaryList.sort((a, b) => b.value == a.value ? b.category - a.category  : b.value - a.value);
-        let message = `[${isoToString(minDate)} - ${isoToString(maxDate)}] ${total}\n`;
+        let message = `[${isoToString(minDate)} - ${isoToString(maxDate)}]\n\n[Summary - ${total}]\n`;
         summaryList.forEach(sl => message = `${message}\n${sl.category} ${sl.value}`);
         message = `${message}\n\n[Details]\n`;
-        summaryList.forEach(sl => message = `${message}\n${sl.category} ${sl.value}\n${sl.detail}`);
+        summaryList.forEach(sl => message = `${message}\n\n${sl.category} ${sl.value}\n${sl.detail}`);
         showData(message);
-        showStatus(summaryList.length - 1, true);
+        showStatus(summaryList.length, true);
     }
 
     saveAsFile = (data, fileName) => {
