--- a/log-beta.html
+++ b/log-beta.html
@@ -385,9 +385,9 @@
         });
         let total = summaryList.reduce((accumulated, item) => accumulated + item.value, 0);
         summaryList.sort((a, b) => b.value == a.value ? b.category - a.category  : b.value - a.value);
-        let message = `[${isoToString(minDate)} - ${isoToString(maxDate)}]\n\n[Summary - ${total}]\n`;
+        let message = `[${isoToString(minDate)} - ${isoToString(maxDate)}]\n\n[Summary]\n\n Total ${total}`;
         summaryList.forEach(sl => message = `${message}\n${sl.category} ${sl.value}`);
-        message = `${message}\n\n[Details]\n`;
+        message = `${message}\n\n[Details]`;
         summaryList.forEach(sl => message = `${message}\n\n${sl.category} ${sl.value}\n${sl.detail}`);
         showData(message);
         showStatus(summaryList.length, true);
