--- a/log-beta.html
+++ b/log-beta.html
@@ -155,11 +155,9 @@
             date = new Date(newDate);
         }
 
-        let toAdd = { date: date, tags: tags, text: text };
-        notes.push(toAdd);
+        notes.push({ date: date, tags: tags, text: text });
         saveNotes();
-
-        showList([toAdd]);
+        filterData(`.filter recent:1m+tag:${tags.join("&")}`);
     }
 
     doList = (content) => {
