--- a/log-beta.html
+++ b/log-beta.html
@@ -410,6 +410,7 @@
                 matchingEntry.value = `${matchingEntry.value}\n${item}`;
             }
         });
+        let message = "";
         summaryList.forEach(sl => message = `${message}\n[${sl.name}]\n\n${sl.item}\n\n`);
         showData(message);
         showStatus(list.length, true);
