--- a/log-beta.html
+++ b/log-beta.html
@@ -176,7 +176,7 @@
     }
 
     doNote = (content) => {
-        showNotes(filterData((!content || !content.trim()) ? "recent:1m" : content);
+        showNotes(filterData((!content || !content.trim()) ? "recent:1m" : content));
     }
 
     doRemove = (content) => {
