--- a/log-beta.html
+++ b/log-beta.html
@@ -249,14 +249,14 @@
         let site = all[0];
         let param = all.length > 1 ? all[1] : "";
         let links = notes.filter(n => n.tags.includes("#link"));
-        let link = links.find(n => n.text.match(![a-z0-9-]+/g));
+        let link = links.find(n => n.text.test(new RegExp(`/!${site}/`));
         
         if (!link) {
             showStatus("failed", true);
             return;
         }
 
-        let url = link.text.match(/^\S+/g).replace("<param>", param);
+        let url = link.text.match(/!\S+/g)[1].replace("<param>", param);
         showData(link.text);
         showStatus("opened", true);
         window.open(url);
