--- a/log-beta.html
+++ b/log-beta.html
@@ -11,6 +11,7 @@
             color: white;
             font-family: "Courier New";
             font-size: large;
+            overflow-wrap: break-word;
         }
 
         hr {
