--- a/log-beta.html
+++ b/log-beta.html
@@ -431,7 +431,7 @@
         let maxDate = new Date("3/1/24");
         list.forEach(l => {
             let categories = l.text.match(/![a-z0-9-]+/g);
-            let category = categories.length >= 1 ? tags[0].substring(1) : "other";
+            let category = (categories || []).length >= 1 ? tags[0].substring(1) : "other";
             let values = l.text.match(/£[0-9.]+/g);
             let value = (values || []).length == 0 || isNaN(parseInt(values[0].substring(1))) ? 0 : parseInt(values[0].substring(1));
             let matchingEntry = summaryList.find(sl => sl.category == category);
